--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-less": "^4.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "typescript": "^3.3.3333",
