--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.3.4",
     "babelify": "^10.0.0",
     "browserify": "^16.2.3",
+    "del": "^4.1.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-less": "^4.0.1",
@@ -29,6 +30,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
+    "gulp-watch": "^5.0.1",
     "typescript": "^3.3.3333",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
