--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "something to how to build one gulp development",
   "main": "index.js",
   "scripts": {
-    "build": "gulp",
+    "build": "gulp build",
+    "watch": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,11 +26,14 @@
     "del": "^4.1.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.7.0",
     "gulp-less": "^4.0.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "typescript": "^3.3.3333",
     "vinyl-buffer": "^1.0.1",
