--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "something to how to build one gulp development",
   "main": "index.js",
   "scripts": {
+    "dev": "gulp dev",
     "build": "gulp build",
     "watch": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1"
